--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,5 +21,5 @@ flutter:
   plugin:
     platforms:
       android:
-        package: com.adzvortex.flutter_essential
+        package: com.sudeep.flutter_essential
         pluginClass: FlutterEssentialPlugin
