--- a/android/build.gradle
+++ b/android/build.gradle
@@ -38,6 +38,7 @@ android {
     dependencies {
         testImplementation("junit:junit:4.13.2")
         testImplementation("org.mockito:mockito-core:5.16.1")
+        implementation 'com.google.android.gms:play-services-ads-identifier:18.0.1'
     }
 
     testOptions {
